# typed-sexp

./: .gitignore  Cargo.toml  LICENSE-dependencies  README.md
crates/embedded-demo/: Cargo.toml
crates/embedded-demo/src/: main.rs
crates/extension-demo/: Cargo.toml
crates/extension-demo/src/: lib.rs
crates/rasm/: Cargo.toml
crates/rasm/demo/: demo.R  fork.R  forkR.s  sabotage.R  sabotageR.s
crates/rasm/rasm/: DESCRIPTION  NAMESPACE
crates/rasm/rasm/R/: asmcall.R  rasm.R
crates/rasm/rasm/man/: assemble.Rd  dot-Asm.Rd  rasm.Rd
crates/rasm/src/: lib.rs  relocate.rs  response.txt
src/: debug.rs  embedded.rs  lib.rs  message.rs  prelude.rs  protect.rs
src/sexp/: env.rs  function.rs  lang.rs  matrix.rs  mod.rs  ptr.rs  vector.rs
